fix various layout issues

--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ svg#hat stop[offset="0"]{stop-color:#4527a0;}
 svg#hat stop[offset="1"]{stop-color:#8f7dc6;}
 .animated svg#hat .star{-webkit-animation-delay:0ms;animation-delay:0ms;-webkit-animation-duration:500ms;animation-duration:500ms;-webkit-animation-iteration-count:1;animation-iteration-count:1;-webkit-animation-name:spin;animation-name:spin;-webkit-animation-timing-function:linear;animation-timing-function:linear;}
 *{-webkit-box-sizing:border-box;box-sizing:border-box;}
-body{color:#4527a0;font-family:'Ubuntu Condensed','Segoe UI',roboto,'Lucida Grande','Helvetica Neue',Helvetica,Arial,sans-serif;font-size:20px;line-height:1.2;max-width:1200px;margin:0 auto;}
+body{color:#4527a0;font-family:'Ubuntu Condensed','Segoe UI',roboto,'Lucida Grande','Helvetica Neue',Helvetica,Arial,sans-serif;font-size:15px;line-height:1.2;max-width:1200px;margin:0 auto;}
 h1,h2{margin:0 0 0.5em;}
 h1{font-size:1.2em;font-weight:600;}
 h2{font-size:1.1em;}
@@ -31,12 +31,12 @@ img{max-height:100%;max-width:100%;}
 #hero h2 span{-webkit-animation-delay:1.1s;animation-delay:1.1s;}
 #hero h2 span:first-child{-webkit-animation-delay:1s;animation-delay:1s;}
 #hero h2 span:last-child{-webkit-animation-delay:1.2s;animation-delay:1.2s;}
+.add{display:none;}
 a{color:#4527a0;text-decoration:none;}
 a:hover{text-decoration:underline;}
 a.button{background-color:#4527a0;color:#fefefe;display:inline-block;padding:0.5em;}
 p{margin:1em 0;}
 .annotated p{margin:0;}
-.add{display:none;}
 ul.nav li{display:block;}
 .projects{margin:2em 0;}
 .projects .project{background-color:#9c9788;border:1px solid #4527a0;margin:1em 0;width:100%;}
@@ -45,7 +45,7 @@ ul.nav li{display:block;}
 .impressum{margin:0 auto;width:80%;min-width:250px;}
 .footer{background-color:#4527a0;bottom:0;color:#fefefe;font-size:0.8em;left:0;padding:0.5em;position:fixed;text-align:center;top:auto;width:100%;}
 .footer a{color:#fefefe;}
-.footer a :hover{text-decoration:underline;}
+.footer a:hover{text-decoration:underline;}
 .social{text-align:center;position:absolute;top:1em;right:1em;left:auto;}
 .social ul{display:inline-block;}
 .social ul li{float:left;margin:0.5em 0.2em;}
@@ -55,15 +55,15 @@ ul.nav li{display:block;}
 .hex.small{text-align:center;min-width:inherit;min-height:inherit;width:auto;height:auto;}
 .hex.small .container{display:inline-block;}
 .hex.small .hex__svg{fill:#444;stroke:#444;width:3em;height:3em;position:relative;float:left;}
-.hex.small .hex__link{float:left;line-height:3em;margin:0 0 0 0.5em;}
-.hex .hex__svg{position:absolute;width:100%;height:100%;fill:#fff;stroke:#000;stroke-width:1;}
+.hex.small .hex__link{float:left;line-height:3em;}
+.hex.small .hex__link span{margin:0 0 0 0.2em;}
+.hex .hex__svg{position:absolute;width:100%;height:100%;fill:#fefefe;stroke:#666;stroke-width:1;}
 .hex .hex__content{position:relative;text-align:center;width:60%;height:60%;top:20%;left:20%;}
 .hex .hex__content.annotated{color:#9c9788;}
 .hex .hex__content.annotated p{margin:0.2em 0;}
-.hex .hex__content.annotated h2{margin:1em 0;font-weight:600;}
-@media (min-width:600px){main section{font-size:2vw;}}
-@media (min-width:700px){body{font-size:18px;}}
-@media (min-width:800px){body{font-size:15px;} .main{margin:5em auto 0;width:800px;position:relative;} .hex{position:absolute;width:300px;height:300px;max-width:inherit;max-height:inherit;} .hex.hero{left:50%;margin:0 0 0 -150px;} .hex.evocell{top:145px;} .hex.magicshifter{top:145px;right:0;left:auto;} .hex.about{top:290px;margin:0 0 0 -150px;left:50%;} .hex.hexpaper{position:absolute;top:480px;right:75px;}}
+.hex .hex__content.annotated h2{margin:0.3em 0;font-weight:600;}
+@media (min-width:400px){body{font-size:18px;} .hex .hex__content.annotated h2{margin:1em 0;}}
+@media (min-width:800px){body{font-size:15px;} .main{margin:5em auto 0;width:800px;position:relative;} .add{display:none;} .hex{position:absolute;width:300px;height:300px;max-width:inherit;max-height:inherit;} .hex.hero{left:50%;margin:0 0 0 -150px;} .hex.evocell{top:145px;} .hex.magicshifter{top:145px;right:0;left:auto;} .hex.about{top:290px;margin:0 0 0 -150px;left:50%;} .hex.hexpaper{position:absolute;top:480px;right:75px;}}
 @media (min-width:1100px){body{font-size:17px;} .main{margin:5em auto 0;width:1100px;} .add{display:inline;} .hex{width:400px;height:400px;} .hex.hero{margin:0 0 0 -200px;} .hex.evocell{top:200px;} .hex.magicshifter{top:200px;} .hex.about{top:400px;margin:0 0 0 -200px;} .hex.hexpaper{top:666px;right:120px;}}
 .anim{-webkit-animation-duration:0.7s;animation-duration:0.7s;-webkit-animation-fill-mode:forwards;animation-fill-mode:forwards;-webkit-animation-iteration-count:1;animation-iteration-count:1;-webkit-animation-timing-function:ease-out;animation-timing-function:ease-out;}
 @-webkit-keyframes spin{100%{-webkit-transform:rotate(360deg);transform:rotate(360deg);}}
